Fix alignment of fund price indicators on large screens

--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -455,6 +455,7 @@ button {
         .gain {
             width: 200px;
             height: 100%;
+            vertical-align: top;
             .text {
                 display: block;
                 width: 100%;
